--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-reanimated": "^1.1.0",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.12.1"
+    "react-navigation": "^3.12.1",
+    "react-navigation-tabs": "^2.5.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
